--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul>
 	<li><a href="{{ root_url }}/">Blog</a></li>
 	<li><a href="{{ root_url }}/archives">Archive</a></li>
-	<li><a href="{{ root_url }}/contact">Contact</a></li>
+	<li><a href="/about">About</a></li>
 </ul>
