--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -1,7 +1,12 @@
-$color-background: #eee !default;
-$color-main: #258fb8 !default;
-$color-gray01: #000 !default;
-$color-gray02: #333 !default;
-$color-gray03: #ccc !default;
-$color-gray04: #ddd !default;
-$color-gray05: #fff !default;
+$color-background: #FFF !default; // white
+$color-main: #3F3E59 !default;
+$color01: #3F3E59 !default; // black
+$color02: #00C79F !default; // green
+$color03: #00E37C !default; // light green
+$color04: #0095E2 !default; // blue
+$color05: #AB39BA !default; // purple
+$color06: #DDDDDD !default; // gray
+$color07: #FFF6E1 !default; // beige
+$color08: #FCFCFC !default; // light gray
+$color-link: #00BE98 !default; // green
+$color-link-hover: #0095E2 !default; // blue
