--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -7,6 +7,9 @@
 		{% endif %}
 			{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
 	</h2>
+	<div class="meta">
+		<div class="date">{% include post/date.html %}{{ time }}</div>
+	</div>
 	<div class="entry-content">
 		{{ content | excerpt }}
 		{% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
@@ -14,10 +17,10 @@
 	</div>
 {% else %}
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
+	<div class="meta">
+		<div class="date">{% include post/date.html %}{{ time }}</div>
+	</div>
 	<div class="entry-content">{{ content }}</div>
 {% endif %}
 
-<div class="meta">
-	<div class="date">{% include post/date.html %}{{ time }}</div>
-	{% include post/categories.html %}
-</div>
+{% include post/sharing.html %}
