--- a/source/_includes/aboutme.html
+++ b/source/_includes/aboutme.html
@@ -4,7 +4,9 @@
     <a href="http://twitter.com/{{site.twitter_user}}"><img class="icon" src="{{site.user_image}}"></a>
 
     <h3>{{ site.author }}</h3>
-    <p><a href="http://twitter.com/{{site.twitter_user}}">@{{ site.twitter_user }}</a>{{site.user_profile}}</p>
+    <p><a href="https://www.facebook.com/photosynthesiis">Facebook</a>
+    &nbsp;|&nbsp; <a href="http://weibo.com/eminemlqs">Weibo</a>
+    &nbsp;|&nbsp; <a href="https://www.linkedin.com/in/qiushili">LinkedIn</a></p>
 
     <div class="codes">
       <h4>Codes</h4>
